--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,12 +5,12 @@ if (MVVM_BUILD_EXAMPLES)
     add_subdirectory(collidingmice)
     add_subdirectory(concurrentplot)
     add_subdirectory(dragandmove)
-    add_subdirectory(groupproperty)
+    #add_subdirectory(groupproperty)
     add_subdirectory(flateditor)
     add_subdirectory(graphicsproxy)
     add_subdirectory(helloworld)
     add_subdirectory(layereditor)
-    add_subdirectory(modelinqml)
+    #add_subdirectory(modelinqml)
     add_subdirectory(nodeeditor)
     add_subdirectory(plotcolormap)
     add_subdirectory(plotgraphs)
